[package]
name = "typewriter-cli"
version = "1.0.0"
edition = "2021"
authors = ["Lucy Gschwantner lucygschwantner@gmail.com"]
license = "MIT"
description = "A small CLI tool to create a typewriter effect"
repository = "https://github.com/jackboxx/typewriter-cli"
readme = "README.md"
keywords = ["typewriter", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
